--- a/blocks/Rotation/rotation.css
+++ b/blocks/Rotation/rotation.css
@@ -1,3 +1,11 @@
 .rotation {
     animation: rotation-picture 20s linear infinite;
 }
+@keyframes rotation-picture {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+}
