--- a/blocks/Video/__iframe/vide__iframe.css
+++ b/blocks/Video/__iframe/vide__iframe.css
@@ -1,7 +1,7 @@
 .video__iframe {
-    margin-right: 20px;
+    width: 100%;
+    height: 100%;
     border: 0;
-    z-index: 1; 
 }
 .video__iframe:last-of-type {
     margin: 0;
